# labs_c

./: README.md
lab0/src/: main.c
lab1-0/src/: main.c
lab1-2/src/: main.c
lab10/: CMakeLists.txt
lab10/src/: main.c
lab11/: CMakeLists.txt
lab11/src/: main.c
lab2/src/: main.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/src/: main.c
lab5/src/: main.c
lab6-0/src/: main.c
lab6-1/src/: main.c
lab6-2/src/: main.c
lab6-3/src/: main.c
lab7/src/: main.c
lab8-0/src/: main.c
lab8-1/src/: main.c
lab9/src/: main.c
